add manupulator task

--- a/.gitignore
+++ b/.gitignore
@@ -176,4 +176,4 @@ FakesAssemblies/
 /src/uLearn.Web/Ideone/ExecutionService.Credentials.cs
 *.Settings.cs
 /src/uLearn.Web/Courses/
-/src/uLearn.Web/Courses.Staging
+/src/uLearn.Web/Courses.Staging/*.zip
