--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -66,21 +66,22 @@
     <Compile Include="Slides\U08_Recursion\S099_RoutePlanningExercise.cs" />
     <Compile Include="Slides\U09_Sorting\S045_BinSearch.cs" />
     <Compile Include="Slides\U09_Sorting\S055_BubbleSortRange.cs" />
-    <Compile Include="Slides\U10_OOP\S010_Classes.cs" />
-    <Compile Include="Slides\U10_OOP\S020_StaticAndDynamic.cs" />
-    <Compile Include="Slides\U10_OOP\S030_Methods.cs" />
-    <Compile Include="Slides\U10_OOP\S040_ExtensionMethods.cs" />
-    <Compile Include="Slides\U10_OOP\S050_DirectoryAndFile.cs" />
-    <Compile Include="Slides\U10_OOP\S060_StaticClass.cs" />
-    <Compile Include="Slides\U11_Inheritance\S010_Why.cs" />
-    <Compile Include="Slides\U11_Inheritance\S020_Inheritance.cs" />
-    <Compile Include="Slides\U11_Inheritance\S030_Hierarchy.cs" />
-    <Compile Include="Slides\U11_Inheritance\S040_Array.cs" />
-    <Compile Include="Slides\U11_Inheritance\S050_Interfaces.cs" />
-    <Compile Include="Slides\U11_Inheritance\S070_ComparableImpl.cs" />
-    <Compile Include="Slides\U11_Inheritance\S080_IComparable.cs" />
-    <Compile Include="Slides\U11_Inheritance\S090_Polymorphism.cs" />
-    <Compile Include="Slides\U11_Inheritance\S100_VirtualMethods.cs" />
+    <Compile Include="Slides\U10_Practice\S099_Exercise.cs" />
+    <Compile Include="Slides\U11_OOP\S010_Classes.cs" />
+    <Compile Include="Slides\U11_OOP\S020_StaticAndDynamic.cs" />
+    <Compile Include="Slides\U11_OOP\S030_Methods.cs" />
+    <Compile Include="Slides\U11_OOP\S040_ExtensionMethods.cs" />
+    <Compile Include="Slides\U11_OOP\S050_DirectoryAndFile.cs" />
+    <Compile Include="Slides\U11_OOP\S060_StaticClass.cs" />
+    <Compile Include="Slides\U12_Inheritance\S010_Why.cs" />
+    <Compile Include="Slides\U12_Inheritance\S020_Inheritance.cs" />
+    <Compile Include="Slides\U12_Inheritance\S030_Hierarchy.cs" />
+    <Compile Include="Slides\U12_Inheritance\S040_Array.cs" />
+    <Compile Include="Slides\U12_Inheritance\S050_Interfaces.cs" />
+    <Compile Include="Slides\U12_Inheritance\S070_ComparableImpl.cs" />
+    <Compile Include="Slides\U12_Inheritance\S080_IComparable.cs" />
+    <Compile Include="Slides\U12_Inheritance\S090_Polymorphism.cs" />
+    <Compile Include="Slides\U12_Inheritance\S100_VirtualMethods.cs" />
     <Content Include="Slides\logo.png" />
     <Content Include="Slides\thumbnail.png" />
     <Content Include="Slides\U00_Basics\S081-Scope.quiz.xml">
@@ -136,14 +137,15 @@
     <Content Include="Slides\U09_Sorting\S025_Analysis.quiz.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Slides\manipulator.png" />
     <Content Include="Slides\U08_Recursion\Title.txt" />
     <Content Include="Slides\U08_Recursion\_20_map.png" />
     <Content Include="Slides\U08_Recursion\_30_map.png" />
     <Content Include="Slides\U09_Sorting\bin-search.png" />
     <Content Include="Slides\U09_Sorting\Title.txt" />
-    <Content Include="Slides\U10_OOP\Title.txt" />
-    <Content Include="Slides\U11_Inheritance\Title.txt" />
+    <Content Include="Slides\U10_Practice\manipulator.png" />
+    <Content Include="Slides\U10_Practice\Title.txt" />
+    <Content Include="Slides\U11_OOP\Title.txt" />
+    <Content Include="Slides\U12_Inheritance\Title.txt" />
     <None Include="Slides\U01_Mistakes\InstructorNotes.md" />
     <Content Include="Slides\U01_Mistakes\S091_Style2.quiz.xml">
       <SubType>Designer</SubType>
@@ -254,7 +256,6 @@
     <Compile Include="Slides\U08_Recursion\S065_FinishPermutations.cs" />
     <Compile Include="Slides\U08_Recursion\S055_FixSubsets.cs" />
     <Compile Include="Slides\U08_Recursion\S015_FixRecursion.cs" />
-    <Compile Include="Slides\Manipulator_Exercise.cs" />
     <Compile Include="Slides\U09_Sorting\S099_Exercise.cs" />
     <Compile Include="Slides\U08_Recursion\S010_Recursion.cs" />
     <Compile Include="Slides\U08_Recursion\S020_RecursionTree.cs" />
@@ -290,6 +291,8 @@
     <None Include="Slides\U09_Sorting\autocomplete.zip" />
     <None Include="Slides\U09_Sorting\InstructorNotes.md" />
     <None Include="Slides\U09_Sorting\Search.pdf" />
+    <None Include="Slides\U10_Practice\InstructorNotes.md" />
+    <None Include="Slides\U10_Practice\manipulator.zip" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
