--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -602,8 +602,6 @@
     <Content Include="codemirror\mode\solr\solr.js" />
     <Content Include="codemirror\mode\sparql\index.html" />
     <Content Include="codemirror\mode\sparql\sparql.js" />
-    <Content Include="codemirror\mode\sql\index.html" />
-    <Content Include="codemirror\mode\sql\sql.js" />
     <Content Include="codemirror\mode\stex\index.html" />
     <Content Include="codemirror\mode\stex\stex.js" />
     <Content Include="codemirror\mode\stex\test.js" />
@@ -731,6 +729,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\PublishProfiles\ulearn - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ulearn - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\ulearn - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\buttons.js" />
@@ -845,7 +844,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="bin\" />
     <Folder Include="Courses\" />
   </ItemGroup>
   <ItemGroup>
