--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -67,8 +67,9 @@
     <Compile Include="Slides\U09_Sorting\S045_BinSearch.cs" />
     <Compile Include="Slides\U09_Sorting\S055_BubbleSortRange.cs" />
     <Compile Include="Slides\U10_Practice\S099_Exercise.cs" />
+    <Compile Include="Slides\U11_OOP\exclude_S016_CreateClass.cs" />
     <Compile Include="Slides\U11_OOP\S010_Classes.cs" />
-    <Compile Include="Slides\U11_OOP\S015_CreateClass.cs" />
+    <Compile Include="Slides\U11_OOP\exclude_S015_CopyOfOldTask.cs" />
     <Compile Include="Slides\U11_OOP\S020_StaticAndDynamic.cs" />
     <Compile Include="Slides\U11_OOP\S030_Methods.cs" />
     <Compile Include="Slides\U11_OOP\S040_ExtensionMethods.cs" />
