--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -68,9 +68,9 @@
     <Compile Include="Slides\U09_Sorting\S055_BubbleSortRange.cs" />
     <Compile Include="Slides\U10_Practice\S099_Exercise.cs" />
     <Compile Include="Slides\U11_OOP\exclude_S066_RefactorStatic.cs" />
-    <Compile Include="Slides\U11_OOP\exclude_S045_CreateExtension.cs" />
+    <Compile Include="Slides\U11_OOP\S045_CreateExtension.cs" />
     <Compile Include="Slides\U11_OOP\S017_ShortSyntax.cs" />
-    <Compile Include="Slides\U11_OOP\exclude_S016_CreateClass.cs" />
+    <Compile Include="Slides\U11_OOP\S016_CreateClass.cs" />
     <Compile Include="Slides\U11_OOP\S010_Classes.cs" />
     <Compile Include="Slides\U11_OOP\exclude_S015_CopyOfOldTask.cs" />
     <Compile Include="Slides\U11_OOP\S020_StaticAndDynamic.cs" />
