--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -202,6 +202,12 @@
     <Compile Include="Controllers\SlideNavigationController.cs" />
     <Compile Include="Controllers\ExerciseController.cs" />
     <Compile Include="Controllers\HintController.cs" />
+    <Compile Include="DataContexts\TextsRepo.cs" />
+    <Compile Include="Migrations\201411130734011_extract large text fields.cs" />
+    <Compile Include="Migrations\201411130734011_extract large text fields.Designer.cs">
+      <DependentUpon>201411130734011_extract large text fields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TextBlob.cs" />
     <Compile Include="Ideone\ExecutionService.Settings.Sample.cs" />
     <Compile Include="Migrations\201408220628510_AddUnitAppearance.cs" />
     <Compile Include="Migrations\201408220628510_AddUnitAppearance.Designer.cs">
@@ -392,6 +398,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201410221523323_add index.resx">
       <DependentUpon>201410221523323_add index.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201411130734011_extract large text fields.resx">
+      <DependentUpon>201411130734011_extract large text fields.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
