--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -84,7 +84,9 @@
     <Compile Include="Slides\U12_Inheritance\S030_Hierarchy.cs" />
     <Compile Include="Slides\U12_Inheritance\S040_Array.cs" />
     <Compile Include="Slides\U12_Inheritance\S044_PrintEverything.cs" />
-    <Compile Include="Slides\U12_Inheritance\S045_CombineArrays.cs" />
+    <Compile Include="Slides\U12_Inheritance\S056_Min.cs" />
+    <Compile Include="Slides\U12_Inheritance\S055_MiddleOfThreeAgain.cs" />
+    <Compile Include="Slides\U12_Inheritance\S046_CombineArrays.cs" />
     <Compile Include="Slides\U12_Inheritance\S050_Interfaces.cs" />
     <Compile Include="Slides\U12_Inheritance\S070_ComparableImpl.cs" />
     <Compile Include="Slides\U12_Inheritance\S080_IComparable.cs" />
