--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Slides\U12_Inheritance\S046_CombineArrays.cs" />
     <Compile Include="Slides\U12_Inheritance\S050_Interfaces.cs" />
     <Compile Include="Slides\U12_Inheritance\S070_ComparableImpl.cs" />
-    <Compile Include="Slides\U12_Inheritance\S080_IComparable.cs" />
+    <Compile Include="Slides\U12_Inheritance\S080_IComparer.cs" />
     <Compile Include="Slides\U12_Inheritance\S090_Polymorphism.cs" />
     <Compile Include="Slides\U12_Inheritance\S100_VirtualMethods.cs" />
     <Content Include="Slides\logo.png" />
