Finished tasks for Inheritance

--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -80,6 +80,8 @@
     <Compile Include="Slides\U11_OOP\S055_FileInfo.cs" />
     <Compile Include="Slides\U11_OOP\_Fields.cs" />
     <Compile Include="Slides\U12_Inheritance\S010_Why.cs" />
+    <Compile Include="Slides\U12_Inheritance\S105_ToString.cs" />
+    <Compile Include="Slides\U12_Inheritance\S085_IComparerTask.cs" />
     <Compile Include="Slides\U12_Inheritance\S075_IComparableTask.cs" />
     <Compile Include="Slides\U12_Inheritance\S020_Inheritance.cs" />
     <Compile Include="Slides\U12_Inheritance\S030_Hierarchy.cs" />
