--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Slides\U11_OOP\S050_DirectoryAndFile.cs" />
     <Compile Include="Slides\U11_OOP\S060_StaticClass.cs" />
     <Compile Include="Slides\U11_OOP\S055_FileInfo.cs" />
+    <Compile Include="Slides\U11_OOP\S099_Exercise.cs" />
     <Compile Include="Slides\U11_OOP\_Fields.cs" />
     <Compile Include="Slides\U12_Inheritance\S010_Why.cs" />
     <Compile Include="Slides\U12_Inheritance\S105_ToString.cs" />
@@ -320,6 +321,7 @@
     <None Include="Slides\U09_Sorting\Search.pdf" />
     <None Include="Slides\U10_Practice\InstructorNotes.md" />
     <None Include="Slides\U10_Practice\manipulator.zip" />
+    <None Include="Slides\U11_OOP\InstructorNotes.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
