--- a/src/courses/OOP/OOP.csproj
+++ b/src/courses/OOP/OOP.csproj
@@ -106,6 +106,15 @@
     <Compile Include="Slides\U03_DataStructure\S050_Generics.cs" />
     <Compile Include="Slides\U03_DataStructure\S060_LimitedAutocompleteService.cs" />
     <Compile Include="CoursesTests.cs" />
+    <Compile Include="Slides\U04_UI\S030_SimpleUITask.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Slides\U04_UI\S020_Layouts.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+    <Compile Include="Slides\U04_UI\S010_Intro.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
@@ -125,6 +134,7 @@
     <Content Include="Slides\U02_Polymorphism\Title.txt" />
     <Content Include="Slides\U03_DataStructure\heap.png" />
     <Content Include="Slides\U03_DataStructure\Title.txt" />
+    <Content Include="Slides\U04_UI\Title.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
