--- a/src/courses/OOP/OOP.csproj
+++ b/src/courses/OOP/OOP.csproj
@@ -106,6 +106,9 @@
     <Compile Include="Slides\U03_DataStructure\S050_Generics.cs" />
     <Compile Include="Slides\U03_DataStructure\S060_LimitedAutocompleteService.cs" />
     <Compile Include="CoursesTests.cs" />
+    <Compile Include="Slides\U04_UI\S015_Contorls.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Slides\U04_UI\S030_SimpleUITask.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
@@ -134,7 +137,10 @@
     <Content Include="Slides\U02_Polymorphism\Title.txt" />
     <Content Include="Slides\U03_DataStructure\heap.png" />
     <Content Include="Slides\U03_DataStructure\Title.txt" />
+    <Content Include="Slides\U04_UI\anchors.png" />
+    <Content Include="Slides\U04_UI\controls.png" />
     <Content Include="Slides\U04_UI\Title.txt" />
+    <Content Include="Slides\U04_UI\ui.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
