--- a/src/courses/Linq/linq.csproj
+++ b/src/courses/Linq/linq.csproj
@@ -123,6 +123,9 @@
     <Content Include="Slides\Title.txt" />
     <Content Include="Slides\LINQ\Title.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM copy this post build step to new course
